--- a/style.css
+++ b/style.css
@@ -504,6 +504,7 @@
       width: 147px;
       height: 13px;
       text-align: center;
+      color: white;
     }
     #search2 {
       position: relative;
