--- a/style.css
+++ b/style.css
@@ -513,7 +513,7 @@
       height: 13px;
       text-align: center;
       background-color: white;
-      
+      color: black;
     }
     
     #search2 {
